minor changes to text

--- a/paper/ozone_jgcri.tex
+++ b/paper/ozone_jgcri.tex
@@ -25,6 +25,9 @@ We use the \ldots model to predict ozone levels under the RCP \ldots scenarios.
 
 \section{Introduction}
 Ozone ($O_{3}$) negatively affects plant growth and physiology, and subsequently, crop yields, as it causes injury, reduces photosynthesis, and, decreases plant productivity \parencite{mishra:2013aa}. 
+Research has found that global yields are already affected with several staple crops experiencing reductions of 2-15\% because of existing ozone concentrations \parencite{Avnery2013}. 
+If precursor emissions continue to increase at present rates then ozone sensitive crops could experience a further 10\% reduction in yields by 2030 \parencite{Averny2013}.
+
 Two main approaches exist in the literature to quantify the impact of ozone on agriculture: concentration-based (i.e., AOT40, W126, etc.) that capture the relationship between the cumulative dose over a threshold on the crop damage, and stomatal flux models, which model the flux of ozone through the stomatal pores, also to identify critical levels of ozone \parencite{mills:2007aa}.\footnote{A third, less used model but mentioned here for completeness, is the maximum permissible ozone concentration (MPOC)\parencite{mills:2007aa}.}\footnote{The critical load and level concept came about as a result of the Convention on Long-range Transboundary Air Pollution (LRTAP-Convention) \parencite{clrtap:2015aa}.}\footnote{Concentration-based measures use the concentration of ozone at the plant canopy level and do not take into account the amount of ozone entering the plant.}
 Observational evidence appears to support the idea that flux-based assessments do a better job of predicting ozone impacts, as compared to measures like AOT40 and W126 \parencite{Avnery2013}.
 However, (atleast as of 2013) the flux-based models are not yet suitable for global impact analysis \parencite{Avnery2013}.
@@ -98,7 +101,10 @@ The authors also consider the impacts of changes in methane emissions on ozone l
 \cite{West2013} investigated ozone impacts on human health using the MOZART-4 global chemical transport model to simulate the level of ozone and PM2.5 in 2000, 2030, 2050, and 2100 using the Global GHG emission reduction in the Representative Concentration Pathway 4.5 (RCP4.5) scenario, as well as the associated reference scenario for the pathway. 
 The authors use the AM3 model to incorporate the meteorological inputs from the global general circulation model simulations of RCP4.5.  
 
-
+The literature has employed different sets of methods to estimate crop production and distribution data.
+\cite{Avnery2013} uses a combination of satellite-based crop distribution maps that contain mean crop production data for each grid cell with a calculated relative yield loss (RYL) (from ozone damage) to calculate the total crop loss in metric tons. 
+\cite{Tai2014} predict the log of the relative yield as a function of growing degree days and killing degree days at each grid cell for the period 1961-2010 using annual crop yield and meteorological data. 
+ 
 
 
 
